# quickshell-config

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Time.qml  shell.qml
apps/: CMakeLists.txt
apps/src/MyShellControlPanel/: .qmlls.ini.in  CMakeLists.txt  Main.qml  main.cpp
apps/src/MyShellControlPanel/components/: CAnim.qml  CMakeLists.txt  NAnim.qml  PageStackItem.qml  SectionBg.qml  StyledText.qml
apps/src/MyShellControlPanel/config/: CMakeLists.txt  baseConfig.cpp  baseConfig.h  configHandler.cpp  configHandler.h
apps/src/MyShellControlPanel/qml/: App.qml  PageStack.qml  Sidebar.qml  SidebarModel.qml
apps/src/MyShellControlPanel/qml/configs/: Index.qml
apps/src/MyShellControlPanel/qml/configs/colors/: Index.qml
apps/src/MyShellControlPanel/qml/configs/keyboard/: Index.qml  KeyboardList.qml
apps/src/MyShellControlPanel/singletons/: CMakeLists.txt  Hypr.qml
assets/pam.d/: pwd
components/: BasePanel.qml  ButtonStateLayer.qml  CAnim.qml  CTooltip.qml  NAnim.qml  StyledText.qml
config/: AppearanceConfig.qml  BarConfig.qml  Config.qml  KeyMapConfig.qml  LauncherConfig.qml  MediaConfig.qml
modules/: CommandCaptureWindow.qml  Drawers.qml  Exclusions.qml  HyprShortcuts.qml  InteractionHandler.qml  PanelBackgrounds.qml  Panels.qml
modules/bar/: Bar.qml  BarWrapper.qml  PopoutHandler.qml
modules/bar/components/: ArchIconBtw.qml  ClockWidget.qml  MediaInfo.qml  Power.qml  StatusIcons.qml  Tray.qml  TrayItem.qml  WindowTitle.qml
modules/bar/components/statusIcons/: AudioStatusIcon.qml  GameModeIcon.qml  KeyboardLayoutIcon.qml  NetworkStatusIcon.qml  NotificationsIcon.qml
modules/bar/components/workspaces/: Workspace.qml  Workspaces.qml
modules/bar/popouts/: AudioPopout.qml  Background.qml  LanguagePopout.qml  MprisPopout.qml  PopoutContent.qml  PopoutWrapper.qml  TrayMenu.qml
modules/bar/popouts/mpris/: MediaControlButton.qml  MprisPlayerItem.qml
modules/commandcapture/: CommandCaptureContent.qml
modules/lock/: AuthBox.qml  InputBar.qml  LockSurface.qml  Pam.qml
modules/mprisviewer/: MprisContent.qml
modules/mprisviewer/mpris/: MediaControlButton.qml  MprisPlayerItem.qml
modules/osd/: Content.qml  Wrapper.qml
modules/session/: Background.qml  Content.qml  Wrapper.qml
modules/startmenu/: Background.qml  Content.qml  StateTitle.qml  Wrapper.qml
modules/startmenu/commands/: dummyCommand.json  dummyCommand.py  forceReload.json  forceReload.sh
modules/startmenu/items/: AppItem.qml  CommandItem.qml
modules/startmenu/states/: AppList.qml  CommandList.qml  CommentList.qml
myshell/components/: ButtonStateLayer.qml  MaterialIcon.qml  ShadedIcon.qml  StyledText.qml
myshell/components/controls/: StyledSlider.qml
myshell/components/utils/: CustomShortcut.qml
myshell/config/: AppearanceConfig.qml  BarConfig.qml  BorderConfig.qml  MediaConfig.qml
myshell/modules/: Border.qml  Drawers.qml  PanelBackgrounds.qml  Panels.qml
myshell/modules/bar/: Bar.qml  BarWrapper.qml
myshell/modules/bar/components/: ClockWidget.qml  MediaInfo.qml  StatusIcons.qml  Tray.qml  WindowTitle.qml
myshell/modules/bar/components/statusIcons/: GameModeIcon.qml  KeyboardLayoutIcon.qml  NotificationsIcon.qml
myshell/modules/bar/components/workspaces/: Workspaces.qml
myshell/modules/bar/popouts/: AudioPopout.qml  Background.qml  PopoutPayload.qml  PopoutWrapper.qml
myshell/modules/commandcapture/: CommandCaptureWrapper.qml
myshell/modules/lock/: AuthBox.qml  Content.qml  InputBar.qml  Lock.qml  LockSurface.qml
myshell/modules/mprisviewer/: MprisBackground.qml  MprisWrapper.qml
myshell/modules/mprisviewer/mpris/: MprisPlayerItem.qml
myshell/modules/osd/: Content.qml
myshell/modules/session/: Wrapper.qml
myshell/modules/startmenu/: StateTitle.qml  Wrapper.qml
myshell/modules/startmenu/states/: AppList.qml  CommandList.qml  StateWrapper.qml
myshell/services/: AudioService.qml  Hypr.qml  MprisService.qml  Time.qml  UserCommandService.qml
myshell/services/network/: Networkctl.qml
myshell/utils/: GlobalStateManager.qml  Icons.qml  ListSearcher.qml  Paths.qml  UserInfo.qml
plugin/: CMakeLists.txt
plugin/src/: CMakeLists.txt  appdb.cpp  appdb.h
plugin/src/MyShellPlugin/: CMakeLists.txt  appdb.cpp  appdb.h  cmdhandler.cpp  cmdhandler.h  colors.cpp  colors.h  colorservice.cpp  colorservice.h  hypr.cpp  hypr.h  kbd.cpp  kbd.h  networkservice.cpp  networkservice.h
plugin/src/MyShellPlugin/configs/: CMakeLists.txt  appearanceconfig.cpp  appearanceconfig.h  config.cpp  config.h  generator.py
plugin/src/MyShellPlugin/configs/schemas/: AppearanceConfig.json  BarConfig.json  BorderConfig.json  KeyMapConfig.json  LauncherConfig.json  MediaConfig.json
plugin/src/MyShellPlugin/include/: CMakeLists.txt  propertymacros.h
plugin/src/MyShellPlugin/interfaces/: CMakeLists.txt  nm_interface.cpp  nm_interface.h  org.freedesktop.NetworkManager.xml
plugin/src/MyShellPlugin/utils/: CMakeLists.txt  metaiterate.cpp  metaiterate.h  paths.cpp  paths.h
services/: AppService.qml  AudioService.qml  ColorService.qml  Hypr.qml  KeyboardService.qml  MprisService.qml  PanelService.qml  SysInfo.qml  Time.qml  UserCommandService.qml
services/network/: Networkctl.qml
utils/: GlobalStateManager.qml  Icons.qml  Paths.qml
utils/scripts/: HyprToggleGamemode.sh
